Update JWT secret key in service configs

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 MONGO_URI=mongodb+srv://dijanahasani:Traveli1@traveli1.yclmttj.mongodb.net/myappdb?retryWrites=true&w=majority
-JWT_SECRET=adriantedua1212
+JWT_SECRET=dijana1
