deploy almost ready update

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,22 @@
 # Copy this file to .env and fill in your values
 
+# ── MongoDB (user-service, content-service, notification-service, etc.) ──────
+# Option A — MongoDB Atlas (cloud, free tier): https://www.mongodb.com/cloud/atlas
+#   1. Sign up → Create a free cluster → Database → Connect → "Drivers" → copy URI
+#   2. Replace <password> with your database user password; set the database name after the /
+#   Example: MONGO_URI=mongodb+srv://myuser:mypass@cluster0.xxxxx.mongodb.net/mydb?retryWrites=true&w=majority
+# Option B — Local MongoDB: install from https://www.mongodb.com/try/download/community
+#   Example: MONGO_URI=mongodb://localhost:27017/travelblog
+# Each service that uses MongoDB needs MONGO_URI in its own .env (e.g. user-service/.env).
+MONGO_URI=mongodb+srv://dijanahasani:<db_password>@traveli1.yclmttj.mongodb.net/?appName=Traveli1
+
+# Backend (user-service, content-service, notification-service): frontend origin for CORS in production
+# Set NODE_ENV=production and FRONTEND_URL to your deployed frontend URL (e.g. https://your-app.vercel.app)
+# FRONTEND_URL=https://your-frontend.vercel.app
+
+# content-service only: notification service URL (for like/comment/post-delete notifications)
+# NOTIF_SERVICE_URL=http://localhost:5006
+
 # ── JWT secrets (backend) ─────────────────────────────────────────────────────
 JWT_SECRET=your_super_secret_jwt_key_here
 JWT_REFRESH_SECRET=your_super_secret_refresh_key_here
@@ -12,6 +29,9 @@ JWT_REFRESH_SECRET=your_super_secret_refresh_key_here
 # 5. Create frontend/.env with these values (REACT_APP_ prefix required)
 REACT_APP_CLOUDINARY_CLOUD_NAME=your_cloud_name
 REACT_APP_CLOUDINARY_UPLOAD_PRESET=your_unsigned_preset_name
+
+# Optional: if using location-service in production, set its URL (frontend)
+# REACT_APP_LOCATION_SERVICE_URL=https://your-location-service.railway.app
 
 # ── VAPID keys (notification-service) ────────────────────────────────────────
 # Regenerate for production: node -e "const wp=require('web-push'); const k=wp.generateVAPIDKeys(); console.log(k)"
